language/move-lang/tests/move_check/translated_ir_tests/commands/if_assigns_no_else.exp
error: 

   ┌── tests/move_check/translated_ir_tests/commands/if_assigns_no_else.move:4:30 ───
   │
 4 │     0x0::Transaction::assert(x == 42, 42);
   │                              ^ Invalid usage of local 'x'
   ·
 2 │     let x;
   │         - The local might not have a value due to this position. The local must be assigned a value before being used
   │

