language/move-lang/tests/move_check/translated_ir_tests/commands/if_assigns_no_else.move
script {
fun main() {
    let x;
    if (true) x = 42;
    0x0::Transaction::assert(x == 42, 42);
}
}

// check: COPYLOC_UNAVAILABLE_ERROR
